# api/java/impl/src/main/java/br/com/senior/mydomain/myservice/services/funcionario/FuncionarioService.java
@@ -1,10 +1,12 @@
 package br.com.senior.mydomain.myservice.services.funcionario;
 
 import br.com.senior.mydomain.myservice.Funcionario;
+import br.com.senior.mydomain.myservice.FuncionarioEntity;
 import br.com.senior.mydomain.myservice.repositories.funcionario.FuncionarioRepository;
 import org.springframework.stereotype.Service;
 
 import javax.inject.Inject;
+import javax.validation.constraints.NotNull;
 import java.util.UUID;
 
 @Service
@@ -15,5 +17,9 @@ public class FuncionarioService {
 
     public void desativarFuncioario(Funcionario.Id id) {
         funcionarioRepository.desativar(UUID.fromString(String.valueOf(id)));
+    }
+
+    public FuncionarioEntity findFuncionanrioByUsername(String username) {
+        return funcionarioRepository.findFuncionarioByUsername(username);
     }
 }
